--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -761,7 +761,7 @@
 <label for="charity-select" style=""> We will donate to a randomly selected charity unless you choose a preferred one:</label>
 <select id="charity-select" style="">
     <option value="" selected>Randomly selected charity</option>
-    <option value="Red Cross (international)">Red Cross / Red Crescent (International)</option>
+    <option value="Red Cross / Red Crescent">Red Cross / Red Crescent (International)</option>
 
     {% if local_red_cross != "Unknown" %}
         <option value="Red Cross (local)">{{ local_red_cross }}</option>
@@ -979,9 +979,9 @@
 
         <br>
 
-        <p style="text-align: center; ">
-            Please move the sliders to indicate your answers.
-        </p>
+<!--        <p style="text-align: center; ">-->
+<!--            Please move the sliders to indicate your answers.-->
+<!--        </p>-->
 
         <p style="text-align: center; ">
             {{ text4|safe }}
