--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -30,81 +30,41 @@
 
 <div class="card-body">
 
-<!--    <div>-->
-<!--        <p>-->
-<!--            We are researchers at the University of Zürich, Switzerland, studying human decision-making.-->
-<!--        </p>-->
-<!--        <p>-->
-<!--            For your participation, you will receive {{ participation_fee }}.-->
-<!--            Additionally, you can earn bonus points based on your decisions and those of other participants.-->
-<!--        </p>-->
-<!--        <p>-->
-<!--            Participation is completely voluntary.-->
-<!--            You may withdraw at any time without penalty or loss of benefits to which you may be otherwise entitled.-->
-<!--        </p>-->
-<!--        <p>-->
-<!--            Your anonymity is guaranteed throughout the whole study, both to other participants and researchers.-->
-<!--        </p>-->
-<!--        <p>-->
-<!--            By clicking "I Consent," you confirm that you give consent to participate.-->
-
-<!--        </p>-->
-<!--        <p>-->
-<!--            For questions, concerns, or suggestions, please contact: <br>-->
-<!--            <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a>-->
-<!--            or <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a>-->
-<!--        </p>-->
-<!--        <p>-->
-<!--            Charlotte Rossetti, Caroline Graf and Jörg Gross <br>-->
-<!--            University of Zurich, Switzerland <br>-->
-<!--        </p>-->
-<!--    </div>-->
-
-
   <div>
       <p>
           {{ consent_thank_you }}
       </p>
 
-      <h6><u>What happens next</u></h6>
+      <h6><u>{{ consent_intro_title }}</u></h6>
 
       {{ consent_intro }}
 
-  <!--    {{C.NUM_ROUNDS}}-->
-
-      <h6><u>Payment</u></h6>
+      <h6><u>{{ consent_payment_title }}</u></h6>
 
       {{ consent_payment|safe }}
 
-      <h6><u>Additional information</u></h6>
+      <h6><u>{{ consent_rights_title }}</u></h6>
 
-      <ul>
-        <li>Participation is <b>voluntary</b>. You may leave the study at any time, in which case your data will be deleted. Compensation is only provided upon completion.</li>
-        <li>Your <b>anonymity</b> is guaranteed throughout the study, both to other participants and researchers.</li>
-        <li>All data is used solely for <b>scientific purposes</b>.</li>
-      </ul>
+      {{ consent_rights }}
 
-
-      <p> <b>
-          By clicking "I CONSENT," you confirm that you have read and understood the information above and agree to participate in the study.
-
-      </b>
+      <p>
+          <b>{{ consent_click }}</b>
       </p>
 
       <p>
-          For questions, concerns, or suggestions, please contact: <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a> or <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a>
+          {{ consent_questions }}
       </p>
       <p>
-          Charlotte Rossetti, Caroline Graf and Jörg Gross <br>
-          University of Zürich, Switzerland <br>
-  <!--        <img/>-->
+          {{ consent_contact }}
+<!--            <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a>-->
+<!--            or <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a>-->
       </p>
 
     </div>
 
      <div style="display: flex; justify-content: flex-end">
         <button style="color: #fff; background-color: #b08600; border: 1px solid transparent; font-size: 1rem; border-radius: 0.25rem;">
-            I CONSENT
+            {{ button_consent }}
         </button>
     </div>
 
